# TorchSplit

./: .gitignore  Cargo.toml  README.md  ann_client.py  gpu_monitor.sh  mypy.ini  pyproject.toml  ray_with_trace.py  tmp.py
data/: results_qps_1.csv  results_qps_1024.csv  results_qps_128.csv  results_qps_2048.csv  results_qps_256.csv  results_qps_32.csv  results_qps_4.csv  results_qps_512.csv  runtime_summary.csv
data/working/: results_qps_1024.csv  results_qps_128.csv  results_qps_2048.csv  results_qps_512.csv
docs/: proposal.md
examples/: clip_model.py  interface.py  profiling_clip.py  tmp.py
examples/clip/: client.py  clip_client.py  clip_dataset.py  clip_gen.py  clip_interface.py  clip_server.py  dataset.py  interface.py  main.py  monolithic_server.py  optimized_server.py  tracing_hook.py
examples/clip/failed-and-archived/: clip_client.py  clip_model.py  rayclient.py  raytest.py
examples/clip_data/: latency_plot.py
examples/clip_data/monolithic/data/: results_qps_1.csv  results_qps_1024.csv  results_qps_128.csv  results_qps_16.csv  results_qps_2.csv  results_qps_2048.csv  results_qps_256.csv  results_qps_32.csv  results_qps_4.csv  results_qps_512.csv  results_qps_64.csv  results_qps_8.csv  runtime_summary.csv
examples/clip_data/optimized/data/: results_qps_1.csv  results_qps_1024.csv  results_qps_128.csv  results_qps_16.csv  results_qps_2.csv  results_qps_2048.csv  results_qps_256.csv  results_qps_32.csv  results_qps_4.csv  results_qps_512.csv  results_qps_64.csv  results_qps_8.csv  runtime_summary.csv
examples/flmr/: flmr_interface.py
examples/ray_template/: ray_template.py
examples/ray_test/: batching_template.py  client.py  hook.py
rust/: lib.rs
src/torch_split/: client.py  graph_utils.py  hints.py  logging.py  utils.py
src/torch_split/cli/: torchsplit.py
src/torch_split/core/: __init__.py  atomic.py  dominance.py  ir.py  partition.py  solver.py
src/torch_split/core/solvers/: ilp.py
src/torch_split/profiling/: annotators.py  interpreter.py  profiler.py  schemas.py
src/torch_split/tracing/: README.md  exporters.py  profiler.py  schemas.py  tracing.py
tests/: clip_main.py  cond_main.py  main.py
torch_split/: __init__.py  cli.py  lib.py  log.py  runtime.py
torch_split/compiler/: ir.py  switchboard.py  utils.py
torch_split/compiler/partition/: dominance.py  ilp.py  provider.py
torch_split/compiler/profiling/: annotators.py
torch_split/core/: __init__.py  client.py  ir.py  switchboard.py  utils.py
torch_split/core/partition/: __init__.py  dominance.py  provider.py
torch_split/lib/: assertions.py  ir.py  log.py  switchboard.py  utils.py
torch_split/lib/partition/: provider.py  solver.py
torch_split/optimizer/: __init__.py  allocator.py  profiler.py
torch_split/src/: torchsplit.py
