[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-split"
version = "0.1.0"
description = "PyTorch model analysis and splitting tool"
requires-python = ">=3.12,<3.14"

dependencies = [
    "frozendict>=2.4.6",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "graphviz (>=0.21,<0.22)",
    "pillow (>=12.0.0,<13.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
]

[project.optional-dependencies]
typing = ["types-frozendict"]

[project.scripts]
torchsplit = "torch_split.src.torchsplit:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["torch_split*"]

[tool.ruff]
line-length = 120
