[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "torch-split"
version = "0.1.0"
description = "PyTorch model analysis, splitting tool, and serving framework"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "frozendict>=2.4.6",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "graphviz (>=0.21,<0.22)",
    "pillow (>=12.0.0,<13.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
]

[project.optional-dependencies]
typing = ["types-frozendict"]

[project.scripts]
torchsplit = "torch_split.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
# This tells maturin where the python package is located
python-source = "."
module-name = "torch_split._rust_backend"

[tool.ruff]
line-length = 120
